--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,7 @@
         
     </head>
     <body style="background:url('https://cdn.pixabay.com/photo/2017/03/01/23/39/cosmetics-2109964_960_720.jpg'); background-repeat:no-repeat; background-size:cover;">
-        <div class="container" style="position:absolute; top:25%; left:20%">
+        <div class="container" id="center-box">
             <div class="jumbotron">
                 
                 <h1>Search for any product! </h1>
